--- a/src/_data/projects.json
+++ b/src/_data/projects.json
@@ -2,11 +2,11 @@
   {
     "title": "GitGraph",
     "description": "Functional Dependency Visualiser in a DAG for python files.",
-    "image": "https://i.ibb.co/CzdQkSH/Screencast-from-20-02-24-12-46-21-AM-IST.gif",
-    "image2": "https://i.ibb.co/CzdQkSH/Screencast-from-20-02-24-12-46-21-AM-IST.gif",
-    "body": "The GitGraph is a tool that visualizes the functional dependencies between python files in a git repository. It generates a Directed Acyclic Graph (DAG) that represents the dependencies between the files. \nThe tool uses the tree-sitter module in Javascript to parse the files and extract the dependencies by creating AST (Abstract Syntax Tree). The graph is then visualized using the d3 library in ReactJS.\n The GitGraph is a powerful tool that can help you to understand the structure of your codebase and identify potential issues. \nIt can be used to analyze the dependencies between files, detect circular dependencies, and identify code smells. The tool is designed to be easy to use and flexible, allowing you to customize the visualization and filter the results based on your needs.\n The project is still under development.",
-    "technologies": ["JavaScript"],
-    "github": "https://github.com/shreshthgoyal/gitgraph",
+    "image": "https://i.ibb.co/RjFDsJp/image.png",
+    "image2": "https://i.ibb.co/RjFDsJp/image.png",
+    "body": "The GitGraph is a tool that visualizes the functional dependencies between python files in a git repository. It generates a Directed Acyclic Graph (DAG) that represents the dependencies between the files. \nThe tool uses the tree-sitter module in Javascript to parse the files and extract the dependencies by creating AST (Abstract Syntax Tree). The graph is then visualized using the d3 library in ReactJS.\n The GitGraph is a powerful tool that can help you to understand the structure of your codebase and identify potential issues. \nIt can be used to analyze the dependencies between files, detect circular dependencies, and identify code smells. The tool is designed to be easy to use and flexible, allowing you to customize the visualization and filter the results based on your needs.",
+    "technologies": ["JavaScript", "Tree-Sitter", "D3.js"],
+    "github": "https://github.com/shreshthgoyal/gitgraph-bck",
     "deployed": "",
     "bgcolor": "var(--hl2-color)",
     "id": "1"
@@ -17,7 +17,7 @@
     "image": "https://i.ibb.co/CzdQkSH/Screencast-from-20-02-24-12-46-21-AM-IST.gif",
     "image2": "https://i.ibb.co/CzdQkSH/Screencast-from-20-02-24-12-46-21-AM-IST.gif",
     "body": "NaturalShell is a Node.js package that simplifies the command line, allowing you to use natural language to generate and understand shell commands.\n It is build on top of Google Gemini. It generates a command for the user based on user needs, it also provides explaination for the command if the user wants to know what the command does, moreover it provides the user to edit the command once its generated and at the end it also provides an option to the user to run the command.\nNaturalShell is a powerful tool that can help you to generate shell commands without having to remember the exact syntax. It can also help you to understand what a command does, and to edit it if necessary. It is a great tool for both beginners and experts who want to work more efficiently in the command line.\n This was my first project built on top of a LLM model and that too a CLI tool.",
-    "technologies": ["JavaScript"],
+    "technologies": ["JavaScript", "LLM"],
     "github": "https://github.com/shreshthgoyal/naturalshell",
     "deployed": "https://www.npmjs.com/package/naturalshell",
     "bgcolor": "var(--hl2-color)",
